# cdk-python-poetry-bundling-venv-bug

./: cdk.json  package-lock.json  package.json
lambdas/example/: .dockerignore  pyproject.toml
lib/: cdk-python-bundling-stack.ts
test/: cdk-python-bundling.test.ts
