[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Malanius Privierre <malaniusprivierre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
boto3 = "^1.22.9"
aws-lambda-powertools = "^1.25.10"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
